# hep-ml-lab

./: .gitignore  404.html  README.md  events.root  index.html  mkdocs.yml  objects.inv  pyproject.toml  roadmap.txt
.github/workflows/: hml_tests.yml  test.yml
.zed/: settings.json
api-reference/datasets/: index.html
api-reference/generators/: index.html
api-reference/hml.datasets/: index.html
api-reference/hml.generators/: index.html
api-reference/hml.metrics/: index.html
api-reference/hml.observables/: index.html
api-reference/hml.preprocessing/: index.html
api-reference/hml.representations/: index.html
api-reference/hml.utils/: index.html
api/hml.datasets/: index.html
api/hml.generators/: index.html
api/hml.metrics/: index.html
api/hml.observables/: index.html
api/hml.representations/: index.html
docs/: history.md  index.md  release_notes.md
docs/api-reference/: hml.metrics.md  hml.preprocessing.md  hml.utils.md
docs/api_reference/: hml.datasets.md  hml.generators.md  hml.observables.md  hml.representations.md  (+1 more)
examples/: 01_generate_events.ipynb  02_create_datasets.ipynb  03_apply_approaches.ipynb  all_runs_from_hml.ipynb  first_run_from_mg5.mad  generate_events.ipynb  notebook.ipynb  one_run_from_hml.ipynb  one_run_from_mg5.mad  second_run_from_mg5.mad  three_same_runs_from_mg5.mad  two_runs_from_mg5.mad
guides/: index.html
history/: index.html
hml/: __init__.py  config.py  datasets.py  generators.py  metrics.py  new_datasets.py  new_generators.py  new_observables.py  new_representations.py  observables.py  preprocessing.py  registration.py  representations.py  serialization.py  types.py  utils.py  validate_type_test.py  validators.py
notebooks/: 03_apply_approaches.ipynb
scripts/: run_tests.sh
search/: search_index.json
tests/: conftest.py  test_approache_cuts_in_tensorflow.py  test_approache_cuts_in_torch.py  test_approaches.py  test_config.py  test_cuts.py  test_dataset.py  test_dataset_image_dataset.py  test_dataset_set_dataset.py  test_generators.py  test_generators_madgraph5.py  test_methods.py  test_metrics.py  test_mg5.py  test_new_generators.py  test_new_observables.py  test_observables.py  test_preprocessing.py  test_pyroot.py  test_representations.py  test_trees.py  test_types.py  test_utils.py  test_utils_get_observable.py
(+338 files in other folders)
