[tool.poetry]
name = "hep-ml-lab"
version = "0.5.0"
description = "An end-to-end framework used for research combining high-energy physics phenomenology with machine learning."
authors = ["Star9daisy <star9daisy@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hml"}]

[tool.poetry.dependencies]
awkward = "^2.7.1"
numba = "^0.60.0"
numpy = "<1.26.0"
particle = "^0.25.2"
python = "^3.10"
typeguard = "^4.4.1"
uproot = "^5.5.0"
vector = "^1.5.2"
fastjet = "^3.4.2.1"
typing-extensions = "^4.12.2"


[tool.poetry.group.dev.dependencies]
deptry = "^0.21.1"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
ignore = ["F401"]

[tool.pytest.ini_options]
addopts = [
  "--cov=hml",
  "--cov-report=xml",
  "--cov-report=term",
  "-vv",
]
