[project]
name = "hep-ml-lab"
version = "0.5.0"
description = "An end-to-end framework for high energy physics & machine learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["typeguard>=4.4.1"]

[dependency-groups]
dev = [
    "deptry>=0.23.0",
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.deptry]
ignore_notebooks = true

[tool.coverage.report]
exclude_lines = ["raise NotImplementedError"]

[tool.pytest.ini_options]
addopts = [
    "--cov=hml",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-report=term",
]
